--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fengzi-music-desktop",
   "productName": "疯子音乐",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "description": "The official desktop client for Fengzi Music",
   "main": "main.js",
   "author": "Fengzi",
@@ -13,11 +13,11 @@
     "appId": "com.fengzi.music",
     "win": {
       "target": "nsis",
-      "icon": "build/icon.ico"
+      "icon": "icon.ico"
     },
     "nsis": {
-      "installerIcon": "build/icon.ico",
-      "uninstallerIcon": "build/icon.ico",
+      "installerIcon": "icon.ico",
+      "uninstallerIcon": "icon.ico",
       "uninstallDisplayName": "疯子音乐",
       "oneClick": false,
       "allowToChangeInstallationDirectory": true
