--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mac": {
       "category": "public.app-category.music",
       "target": "default",
-      "icon": "icon.ico"
+      "icon": "icon.png"
     }
   },
   "scripts": {
