--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "scripts": {
     "dist": "electron-builder",
     "dist:mac": "electron-builder --mac",
-    "dist:mwl": "electron-builder --mwl"
+    "dist:mwl": "electron-builder --mwl",
+    "dist:publish-mac": "electron-builder --mac --publish always",
+    "dist:publish-mwl": "electron-builder --mwl --publish always"
   }
 }
