--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ jobs:
       - stage: Build Mac
         os: osx
         script:
-          - npm run dist:publishmac
+          - npm run dist:publish-mac
