--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
 language: node_js
 node_js: "stable"
 
+cache:
+  directories:
+    - node_modules
+    - $HOME/.cache/electron
+    - $HOME/.cache/electron-builder
+
 jobs:
   include:
-      - stage: Build Mac
-        os: osx
-        script:
-          - npm run dist:publish-mac
+    - os: osx
+      osx_image: xcode11.2
+      env:
+        - ELECTRON_CACHE=$HOME/.cache/electron
+        - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+      script:
+        - npm run dist:publish-mwl
+
+notifications:
+  email: false
