--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "fengzi-music-desktop",
   "productName": "疯子音乐",
-  "version": "0.0.6",
+  "copyright": "Copyright 2021 Fengzi. All Rights Reserved. Based on open-source projects.",
+  "version": "0.1.0",
   "description": "The official desktop client for Fengzi Music",
   "main": "main.js",
   "author": "Fengzi",
   "homepage": "https://music.fengzi.ga/",
+  "dependencies": {
+    "discord-rich-presence": "^0.0.8"
+  },
   "devDependencies": {
     "electron": "^12.0.0",
     "electron-builder": "^22.10.5"
@@ -14,22 +18,30 @@
     "appId": "com.fengzi.music",
     "win": {
       "target": "nsis",
-      "icon": "icon.ico"
+      "icon": "icon.png"
     },
     "nsis": {
-      "installerIcon": "icon.ico",
-      "uninstallerIcon": "icon.ico",
+      "installerIcon": "icon.png",
+      "uninstallerIcon": "icon.png",
       "uninstallDisplayName": "疯子音乐",
       "oneClick": false,
-      "allowToChangeInstallationDirectory": true
+      "allowToChangeInstallationDirectory": true,
+      "shortcutName": "疯子音乐"
     },
     "mac": {
       "category": "public.app-category.music",
-      "target": "default",
+      "target": "dmg",
       "icon": "icon.png"
+    },
+    "dmg": {
+      "backgroundColor": "#A44EED",
+      "icon": "icon.png",
+      "iconSize": 96,
+      "iconTextSize": 14
     }
   },
   "scripts": {
+    "start": "electron .",
     "dist": "electron-builder",
     "dist:mac": "electron-builder --mac",
     "dist:mwl": "electron-builder --mwl",
