--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "appId": "com.fengzi.music",
     "win": {
       "target": "nsis",
-      "icon": "icon.png"
+      "icon": "winicon.ico"
     },
     "nsis": {
-      "installerIcon": "icon.ico",
-      "uninstallerIcon": "icon.ico",
+      "installerIcon": "winicon.ico",
+      "uninstallerIcon": "winicon.ico",
       "uninstallDisplayName": "疯子音乐",
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
